--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head></head>
     <body>
+        <h2 id="textCondition"></h2>
+        <h2 id="allRow"></h2>
         <h2 id="durationTime"></h2>
         <h3 id="startLabel"></h3>
         <h3 id="endLabel"></h3>
@@ -53,5 +55,5 @@
             </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="C:\Users\sumet\Desktop\exampleCreateHtmlDiv.js"></script>
+    <script src="exampleCreateHtmlDiv.js"></script>
 </html>
